# example-application

./: west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  README.md  prj.conf  sample.yaml
app/boards/: nrf5340dk_nrf5340_cpuapp.overlay
app/protobuf/: certs.options  certs.proto  header.proto  imu.options  imu.proto  reboot.proto  time.proto
app/src/: main.c
app/src/common/dev_id/: CMakeLists.txt  dev_id.c  dev_id.h
app/src/common/message_channel/: CMakeLists.txt  message_channel.c  message_channel.h
app/src/modules/core/: CMakeLists.txt  core.c
app/src/modules/downlink/: CMakeLists.txt  downlink.c
app/src/modules/error/: CMakeLists.txt  Kconfig.error  error.c
app/src/modules/systime/: CMakeLists.txt  systime.c
app/src/modules/uplink/: CMakeLists.txt  Kconfig  uplink_mock.c  uplink_spi.c
